# fig

./: .clang-format  .gitignore  .gitmodules  Animation.cpp  Animation.h  Application.cpp  Application.h  Beam.cpp  Beam.h  CMakeLists.txt  Camera.cpp  Camera.h  Circle.cpp  Circle.h  CircleMesh.cpp  CircleMesh.h  ColorBackground.cpp  ColorBackground.h  Config.cpp  Config.h  Core.cpp  Core.h  EventManager.cpp  EventManager.h  FObject.h  GameLayer.h  GlfwWindow.cpp  GlfwWindow.h  GuiBackend.h  GuiLayer.h  HeightsSegment.cpp  HeightsSegment.h  ImGuiBackend.cpp  ImGuiBackend.h  Layer.h  Layers.cpp  Layers.h  Light.cpp  Light.h  LinesObject.cpp  (+67 more)
assets/: barier.blend  barrier.dae  garage.blend  garage.dae  hq.blend  hq.blend11  hq.dae  plant.blend  plant.dae  shell.blend  shell.dae  shroud.blend  shroud.dae  tank.blend  tank.dae  tree.blend  tree.dae  turbine.blend  turbine.dae
editor/: EditorApplication.cpp  EditorApplication.h  EditorEventFabric.cpp  EditorEventFabric.h  EditorEventManager.cpp  EditorEventManager.h  EditorGuiLayer.cpp  EditorGuiLayer.h  EditorKeyReleaseEvent.cpp  EditorKeyReleaseEvent.h  QtOpenGLWindow.cpp  QtOpenGLWindow.h  TriangleWindow.cpp  TriangleWindow.h  WorldLayer.cpp  WorldLayer.h  editor.cpp  globals.cpp  globals.h  mainwindow.cpp  mainwindow.ui  myglwidget.cpp  myglwidget.h  myopenglwindow.cpp  myopenglwindow.h
editor/events/: EditorEventFabric.cpp  EditorEventFabric.h  EditorKeyPressEvent.cpp  EditorKeyPressEvent.h  EditorKeyReleaseEvent.cpp  EditorKeyReleaseEvent.h  EditorKeyRepeatEvent.cpp  EditorKeyRepeatEvent.h  EditorMouseMoveEvent.cpp  EditorMouseMoveEvent.h  EditorMousePressEvent.cpp  EditorMousePressEvent.h  EditorMouseReleaseEvent.cpp  EditorMouseReleaseEvent.h
events/: ErrorEvent.h  Event.h  EventFabric.h  KeyHandler.cpp  KeyHandler.h
math/: AStar.cpp  AStar.h  Noise.cpp  Noise.h
mesh/: CircleMesh.cpp  CircleMesh.h  MainTerrainMesh.cpp  MainTerrainMesh.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  PlainMesh.cpp  PlainMesh.h  SphereMesh.cpp  SphereMesh.h  SubTerrainMesh.cpp  SubTerrainMesh.h  TerrainMesh.cpp  TerrainMesh.h  TerrainMeshSegment.cpp  TerrainMeshSegment.h
misc/: ImGuiLog.cpp  ImGuiLog.h  ImGuiLogger.cpp  ImGuiLogger.h  Log.cpp  Log.h  Logger.cpp  Logger.h
shader/: LinesShader.cpp  LinesShader.h  PhongShader.cpp  PhongShader.h  Shader.cpp  Shader.h  SkyboxShader.cpp  SkyboxShader.h
shaders/: fragment_color.fs  fragment_color_nonflat.fs  fragment_lines.fs  fragment_objects.fs  fragment_skybox.fs  vertex_color.vs  vertex_color_nonflat.vs  vertex_lines.vs  vertex_objects.vs  vertex_skybox.vs
